# vcmi-MMAI

./: .gitignore  .gitmodules  CMakeLists.txt  MMAI.h  README.md  cmake-presets-executorch.json  common.h  dllcp.ps1  executorch-presets.json  main.cpp  readme-mmai.txt
AAI/: AAI.cpp  AAI.h
BAI/: base.cpp  base.h  router.cpp  router.h
BAI/model/: FallbackModel.cpp  FallbackModel.h  ScriptedModel.cpp  ScriptedModel.h  TorchModel.cpp  TorchModel.h  TorchModelDummy.cpp  TorchModelHigh.h  TorchModel_ET.cpp  TorchModel_ET.h  TorchModel_LT.cpp  TorchModel_LT.h  TorchModel_dummy.h  TorchModel_onnx.cpp  TorchModel_onnx.h  libtorch
BAI/scripted/: summoner.cpp  summoner.h
BAI/v1/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  render.cpp  render.h  stackinfo.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h
BAI/v10/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  global_stats.cpp  global_stats.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  player_stats.cpp  player_stats.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v11/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  global_stats.cpp  global_stats.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  player_stats.cpp  player_stats.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v12/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  global_stats.cpp  global_stats.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  player_stats.cpp  player_stats.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v13/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  global_stats.cpp  global_stats.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  link.h  links.h  player_stats.cpp  player_stats.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v2/: BAI.cpp  BAI.h  encoder.cpp  encoder.h  state.cpp  state.h
BAI/v3/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  general_info.cpp  general_info.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h
BAI/v4/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  general_info.cpp  general_info.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v5/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  general_info.cpp  general_info.h  hex.cpp  hex.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v6/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  general_info.cpp  general_info.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v7/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  general_info.cpp  general_info.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v8/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  global_stats.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
BAI/v9/: BAI.cpp  BAI.h  action.cpp  action.h  attack_log.h  battlefield.cpp  battlefield.h  encoder.cpp  encoder.h  global_stats.h  hex.cpp  hex.h  hexaction.h  hexactmask.h  link.h  render.cpp  render.h  stack.cpp  stack.h  state.cpp  state.h  supplementary_data.cpp  supplementary_data.h  util.cpp  util.h
_notes/: android-conan-log.txt  brew_java11_log.txt  creature-values.csv  git.txt  map_pools.txt  new_version.txt  notes-android-old.txt  notes.txt  pc-notes.txt  vcmi_install_notes.txt
executorch/: CMakeUserPresets.json  android32.patch  bash_xtrace.patch  notes.txt
executorch/patch/: android32.patch  windows-arm64.patch  windows-x86.patch  windows.patch  xnndebug.patch
schema/: base.h  schema.h
schema/v1/: constants.h  schema.h  types.h  util.h
schema/v10/: constants.h  schema.h  types.h  util.h
schema/v11/: constants.h  schema.h  types.h  util.h
schema/v12/: constants.h  expbin.h  linbin.h  schema.h  types.h  util.h
schema/v13/: constants.h  expbin.h  linbin.h  schema.h  types.h  util.h
schema/v2/: constants.h  schema.h
schema/v3/: TODO.txt  constants.h  schema.h  types.h  util.h
schema/v4/: constants.h  schema.h  types.h  util.h
schema/v5/: constants.h  schema.h  types.h  util.h
schema/v6/: constants.h  schema.h  types.h  util.h
schema/v7/: constants.h  schema.h  types.h  util.h
schema/v8/: constants.h  schema.h  types.h  util.h
schema/v9/: constants.h  schema.h  types.h  util.h
test/: encoder_test.cpp
